objects/Promotion__c.object
<CustomObject>
    <description>for testing purpose for data loader.</description>
    <fields>
        <fullName>ChangeOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ChangeOwner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promo_Channel__c</fullName>
        <label>Promo Channel</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_ID__c</fullName>
        <label>Promo ID</label>
        <type>AutoNumber</type>
    </fields>
    <label>Promotion</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>